FIX: upgrade row not showing over the content but under it

--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,7 @@ main content
   background-color: rgba(0, 0, 0, 0.5);
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 /* upgrade row style */
 .btn{
